@@ -123,9 +123,13 @@ mget(letters, e1, ifnotfound = as.list(LETTERS))
 ## very low-level: get()ing the "missing argument", e.g., inside browser()
 ls.str(E <- environment((\(m) \(){})()))  # m : <missing>
 str(E$m) # (empty) symbol
-tryCatch(get("m",E), error = function(e) e) # <getMissingError ....>
+ee <- tryCatch(get("m",E), error = function(e) e)
+str(ee)
+ee
 stopifnot(exprs = {
-    inherits(tryCatch(get ("m", E), error=identity), "getMissingError")
+    inherits(ee, "missingArgError") # and
+    inherits(ee, "getMissingError")
+    ##
     inherits(tryCatch(get0("m", E), error=identity), "getMissingError")
     is.symbol(E$m) # => valid argument to get(), and *also* gets 'missing arg':
     inherits(tryCatch(get ( E$m ) , error=identity), "getMissingError")
