@@ -1591,9 +1591,8 @@ SEXP findFun3(SEXP symbol, SEXP rho, SEXP call)
 		TYPEOF(vl) == SPECIALSXP)
 		return (vl);
 	    if (vl == R_MissingArg)
-		errorcall(call,
-		      _("argument \"%s\" is missing, with no default"),
-		      CHAR(PRINTNAME(symbol)));
+	        R_MissingArgError(symbol, call, "getMissingError");
+
 	}
 	rho = ENCLOS(rho);
     }
@@ -2139,11 +2138,7 @@ attribute_hidden SEXP do_get(SEXP call, SEXP op, SEXP args, SEXP rho)
     /* Search for the object */
     rval = findVar1mode(t1, genv, gmode, wants_S4, ginherits, PRIMVAL(op));
     if (rval == R_MissingArg) { // signal a *classed* error:
-	SEXP cond = R_makeErrorCondition(call, "missingArgError", "getMissingError", 0,
-		_("argument \"%s\" is missing, with no default"), CHAR(PRINTNAME(t1)));
-	PROTECT(cond);
-	R_signalErrorCondition(cond, call);
-	UNPROTECT(1); /* cond; not reached */
+	R_MissingArgError(t1, call, "getMissingError");
     }
 
     switch (PRIMVAL(op) ) {
@@ -2293,17 +2288,15 @@ SEXP R_getVarEx(SEXP sym, SEXP rho, Rboolean inherits, SEXP ifnotfound)
 
     SEXP val = inherits ? R_findVar(sym, rho) : R_findVarInFrame(rho, sym);
     if (val == R_MissingArg)
-	error(_("argument \"%s\" is missing, with no default"),
-	      EncodeChar(PRINTNAME(sym)));
+	R_MissingArgError_c(EncodeChar(PRINTNAME(sym)), getLexicalCall(rho), "getVarExError");
     else if (val == R_UnboundValue)
 	return ifnotfound;
     else if (TYPEOF(val) == PROMSXP) {
 	PROTECT(val);
 	val = eval(val, rho);
 	UNPROTECT(1);
-	return val;
     }
-    else return val;
+    return val;
 }
 
 SEXP R_getVar(SEXP sym, SEXP rho, Rboolean inherits)
